featured-section finished

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <!--SECTION FEATURED-->
     <section class="section-featured">
       <div class="container">
-        <h2 class="heading-featured-in">as featured in</h2>
+        <h2 class="heading-featured-in">As featured in</h2>
 
         <div class="logos">
           <img src="images/logos/techcrunch.png" alt="Featured logo" />
@@ -120,7 +120,8 @@
       </div>
 
       <!--STEP 1-->
-      <div class="container grid grid--2cols grid-center">
+      <div class="container grid grid--2cols grid-justify grid-center-v">
+        <!--TEXT-->
         <div class="step-text-box">
           <p class="step-number">01</p>
           <h3 class="heading-tertiary">Tell us what you like (and what not)</h3>
@@ -142,7 +143,17 @@
       </div>
 
       <!--STEP 2-->
-      <div class="container grid grid--2cols">
+      <div class="container grid grid--2cols grid-justify grid-center-v">
+        <!--IMAGE-->
+        <div class="step-image-box">
+          <img
+            class="step-img"
+            src="images/app/app-screen-2.png"
+            alt="Iphone app preferences selection screen"
+          />
+        </div>
+
+        <!--TEXT-->
         <div class="step-text-box">
           <p class="step-number">02</p>
           <h3 class="heading-tertiary">Approve your weekly meal plan</h3>
@@ -152,18 +163,11 @@
             own recipes.
           </p>
         </div>
-        <!--IMAGE-->
-        <div class="step-image-box">
-          <img
-            class="step-img"
-            src="images/app/app-screen-2.png"
-            alt="Iphone app preferences selection screen"
-          />
-        </div>
       </div>
 
       <!--STEP 3-->
-      <div class="container grid grid--2cols">
+      <div class="container grid grid--2cols grid-justify grid-center-v">
+        <!--TEXT-->
         <div class="step-text-box">
           <p class="step-number">03</p>
           <h3 class="heading-tertiary">Receive meals at convenient time</h3>
@@ -183,5 +187,7 @@
         </div>
       </div>
     </section>
+
+    <!--SECTION MEAL-->
   </body>
 </html>
