--- a/index.html
+++ b/index.html
@@ -189,5 +189,99 @@
     </section>
 
     <!--SECTION MEAL-->
+    <section class="section-meals">
+      <!--MEAL HEAD-->
+      <div class="container">
+        <span class="subheading">Meals</span>
+        <h2 class="heading-secondary">
+          Omnifood AI chooses from 5,000+ recipes
+        </h2>
+      </div>
+
+      <!--MEAL IMAGES AND INFORMATIONS-->
+      <div class="container grid grid--3cols">
+        <!--IMAGE-->
+        <div class="meal">
+          <img
+            class="meal-img"
+            src="images/meals/meal-1.jpg"
+            alt="Japanese Gyozas"
+          />
+
+          <!--TAG-->
+          <div class="meal-tags">
+            <span class="tag">Vegetarian</span>
+          </div>
+
+          <p class="meal-title">Japanese Gyozas</p>
+
+          <!--MEAL ATTRIBUTES-->
+          <ul class="meal-attributes">
+            <li class="meal-attribute">
+              <ion-icon class="meal-icon" name="flame-outline"></ion-icon>
+              <span><strong>650</strong> calories</span>
+            </li>
+            <li class="meal-attribute">
+              <ion-icon class="meal-icon" name="restaurant-outline"></ion-icon>
+              <span>NutriScore ® <strong>74</strong></span>
+            </li>
+            <li class="meal-attribute">
+              <ion-icon class="meal-icon" name="star-outline"></ion-icon>
+              <span><strong>4.9</strong> rating(537)</span>
+            </li>
+          </ul>
+        </div>
+
+        <!--IMAGE-->
+        <div class="meal">
+          <img
+            class="meal-img"
+            src="images/meals/meal-2.jpg"
+            alt="Avocado Salad"
+          />
+          <span class="tag">Vegan</span>
+          <span class="tag">Paleo</span>
+          <p class="meal-title">Avocado Salad</p>
+
+          <!--MEAL ATTRIBUTES-->
+          <ul class="meal-attributes">
+            <li class="meal-attribute">
+              <ion-icon class="meal-icon" name="flame-outline"></ion-icon>
+              <span><strong>400</strong> calories</span>
+            </li>
+            <li class="meal-attribute">
+              <ion-icon class="meal-icon" name="restaurant-outline"></ion-icon>
+              <span>NutriScore &reg; <strong>92</strong></span>
+            </li>
+            <li class="meal-attribute">
+              <ion-icon class="meal-icon" name="star-outline"></ion-icon>
+              <span><strong>4.8</strong> rating (441)</span>
+            </li>
+          </ul>
+        </div>
+
+        <!--INFORMATION-->
+        <div class="meal-list">
+          <p>Works with any diet</p>
+          <ul>
+            <li>Vegetarian</li>
+            <li>Vegan</li>
+            <li>Pescatarian</li>
+            <li>Gluten-free</li>
+            <li>Lactose-free</li>
+            <li>Keto</li>
+            <li>Paleo</li>
+            <li>Low FODMAP</li>
+            <li>Kid-friendly</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <!--IONIC ICONS-->
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
   </body>
 </html>
