--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     <!--SECTION MEAL-->
     <section class="section-meals">
       <!--CONTAINER MAX-WIDTH 120REM-->
-      <div class="container">
+      <div class="container center-text">
         <!--MEAL HEAD-->
         <span class="subheading">Meals</span>
         <h2 class="heading-secondary">
@@ -201,7 +201,7 @@
       </div>
 
       <!--MEAL IMAGES AND INFORMATIONS-->
-      <div class="container grid grid--3cols">
+      <div class="container grid grid--3cols margin-bottom-md">
         <!--IMAGE-->
         <div class="meal">
           <img
@@ -283,16 +283,364 @@
         <div class="diets">
           <h3 class="heading-tertiary">Works with any diet</h3>
           <ul class="list">
-            <li class="list-item">Vegetarian</li>
-            <li class="list-item">Vegan</li>
-            <li class="list-item">Pescatarian</li>
-            <li class="list-item">Gluten-free</li>
-            <li class="list-item">Lactose-free</li>
-            <li class="list-item">Keto</li>
-            <li class="list-item">Paleo</li>
-            <li class="list-item">Low FODMAP</li>
-            <li class="list-item">Kid-friendly</li>
+            <li class="list-item">
+              <ion-icon
+                class="checkmark-outline"
+                name="checkmark-outline"
+              ></ion-icon
+              ><span>Vegetarian</span>
+            </li>
+            <li class="list-item">
+              <ion-icon
+                class="checkmark-outline"
+                name="checkmark-outline"
+              ></ion-icon
+              ><span>Vegan</span>
+            </li>
+            <li class="list-item">
+              <ion-icon
+                class="checkmark-outline"
+                name="checkmark-outline"
+              ></ion-icon
+              ><span>Pescatarian</span>
+            </li>
+            <li class="list-item">
+              <ion-icon
+                class="checkmark-outline"
+                name="checkmark-outline"
+              ></ion-icon
+              ><span>Gluten-free</span>
+            </li>
+            <li class="list-item">
+              <ion-icon
+                class="checkmark-outline"
+                name="checkmark-outline"
+              ></ion-icon
+              ><span>Lactose-free</span>
+            </li>
+            <li class="list-item">
+              <ion-icon
+                class="checkmark-outline"
+                name="checkmark-outline"
+              ></ion-icon
+              ><span>Keto</span>
+            </li>
+            <li class="list-item">
+              <ion-icon
+                class="checkmark-outline"
+                name="checkmark-outline"
+              ></ion-icon
+              ><span>Paleo</span>
+            </li>
+            <li class="list-item">
+              <ion-icon
+                class="checkmark-outline"
+                name="checkmark-outline"
+              ></ion-icon
+              ><span>Low FODMAP</span>
+            </li>
+            <li class="list-item">
+              <ion-icon
+                class="checkmark-outline"
+                name="checkmark-outline"
+              ></ion-icon
+              ><span>Kid-friendly</span>
+            </li>
           </ul>
+        </div>
+      </div>
+      <!--ALL RECIPES-->
+      <div class="container all-recipes">
+        <a href="#" class="link">See all recipes &rarr;</a>
+      </div>
+    </section>
+
+    <!--TESTIMONIALS SECTION-->
+    <section class="section-testimonials">
+      <div class="testimonials-container">
+        <!--Testimonials header-->
+        <span class="subheading">Testimonials</span>
+        <h2 class="heading-secondary">Once you try it, you can't go back</h2>
+
+        <!--TESTIMONIALS-->
+        <div class="testimonials">
+          <!--Client Review 1-->
+          <figure class="testimonial">
+            <img
+              class="testimonial-img"
+              src="images/customers/dave.jpg"
+              alt="Photo of customer Dave Bryson"
+            />
+            <blockquote class="testimonial-text">
+              Inexpensive, healthy and great-tasting meals, without even having
+              to order manually! It feels truly magical.
+            </blockquote>
+            <p class="testimonial-name">&mdash; Dave Bryson</p>
+          </figure>
+
+          <!--Client Review 2-->
+          <figure class="testimonial">
+            <img
+              class="testimonial-img"
+              src="images/customers/ben.jpg"
+              alt="Photo of customer Ben Hadley"
+            />
+            <blockquote class="testimonial-text">
+              The AI algorithm is crazy good, it chooses the right meals for me
+              every time. It's amazing not to worry about food anymore!
+            </blockquote>
+            <p class="testimonial-name">&mdash; Ben Hadley</p>
+          </figure>
+
+          <!--Client Review 3-->
+          <figure class="testimonial">
+            <img
+              class="testimonial-img"
+              src="images/customers/steve.jpg"
+              alt="Photo of customer Steve Miller"
+            />
+            <blockquote class="testimonial-text">
+              Omnifood is a life saver! I just started a company, so there's no
+              time for cooking. I couldn't live without my daily meals now!
+            </blockquote>
+            <p class="testimonial-name">&mdash; Steve Miller</p>
+          </figure>
+
+          <!--Client Review 4-->
+          <figure class="testimonial">
+            <img
+              class="testimonial-img"
+              src="images/customers/hannah.jpg"
+              alt="Photo of customer Hannah Smith"
+            />
+            <blockquote class="testimonial-text">
+              I got Omnifood for the whole family, and it frees up so much time!
+              Plus, everything is organic and vegan and without plastic.
+            </blockquote>
+            <p class="testimonial-name">&mdash; Hannah Smith</p>
+          </figure>
+        </div>
+      </div>
+
+      <!--GALLERY-->
+      <div class="gallery">
+        <figure class="gallery-item">
+          <img class="gallery-img" src="images/gallery/gallery-1.jpg" />
+        </figure>
+        <figure class="gallery-item">
+          <img class="gallery-img" src="images/gallery/gallery-2.jpg" />
+        </figure>
+        <figure class="gallery-item">
+          <img class="gallery-img" src="images/gallery/gallery-3.jpg" />
+        </figure>
+        <figure class="gallery-item">
+          <img class="gallery-img" src="images/gallery/gallery-4.jpg" />
+        </figure>
+        <figure class="gallery-item">
+          <img class="gallery-img" src="images/gallery/gallery-5.jpg" />
+        </figure>
+        <figure class="gallery-item">
+          <img class="gallery-img" src="images/gallery/gallery-6.jpg" />
+        </figure>
+        <figure class="gallery-item">
+          <img class="gallery-img" src="images/gallery/gallery-7.jpg" />
+        </figure>
+        <figure class="gallery-item">
+          <img class="gallery-img" src="images/gallery/gallery-8.jpg" />
+        </figure>
+        <figure class="gallery-item">
+          <img class="gallery-img" src="images/gallery/gallery-9.jpg" />
+        </figure>
+        <figure class="gallery-item">
+          <img class="gallery-img" src="images/gallery/gallery-10.jpg" />
+        </figure>
+        <figure class="gallery-item">
+          <img class="gallery-img" src="images/gallery/gallery-11.jpg" />
+        </figure>
+        <figure class="gallery-item">
+          <img class="gallery-img" src="images/gallery/gallery-12.jpg" />
+        </figure>
+      </div>
+    </section>
+
+    <!--PRICING SECTION-->
+    <section class="section-pricing">
+      <!--PRICING HEADER-->
+      <div class="container">
+        <span class="subheading">Pricing</span>
+        <h2 class="heading-secondary">Eating well without breaking the bank</h2>
+      </div>
+
+      <!--PRICING PLANS-->
+      <div class="container grid grid--2cols">
+        <!--STARTER-->
+        <div class="pricing-plan">
+          <header class="plan-header">
+            <p class="plan-name">Starter</p>
+            <p class="plan-price"><span>$</span>399</p>
+            <p class="plan-text">per month. That's just $13 per meal!</p>
+          </header>
+
+          <!--FEATURES LIST-->
+          <ul class="list">
+            <li class="list-item">
+              <ion-icon
+                class="checkmark-outline"
+                name="checkmark-outline"
+              ></ion-icon
+              >1 meal per day
+            </li>
+            <li class="list-item">
+              <ion-icon
+                class="checkmark-outline"
+                name="checkmark-outline"
+              ></ion-icon
+              >Order from 11am to 9pm
+            </li>
+            <li class="list-item">
+              <ion-icon
+                class="checkmark-outline"
+                name="checkmark-outline"
+              ></ion-icon
+              >Delivery is free
+            </li>
+            <li class="list-item">
+              <ion-icon class="starter-icon" name="close-outline"></ion-icon>Get
+              access to latest recipes
+            </li>
+          </ul>
+
+          <!--BUTTON CTA-->
+          <div class="plan-button">
+            <a href="#" class="btn btn--full">Start eating well</a>
+          </div>
+        </div>
+
+        <!--COMPLETE-->
+        <div class="pricing-plan">
+          <header class="plan-header">
+            <p class="plan-name">Complete</p>
+            <p class="plan-price"><span>$</span>649</p>
+            <p class="plan-text">per month. That's just $11 per meal!</p>
+          </header>
+
+          <!--FEATURES LIST-->
+          <ul class="list">
+            <li class="list-item">
+              <ion-icon
+                class="checkmark-outline"
+                name="checkmark-outline"
+              ></ion-icon>
+              <span><strong>2 meals</strong> per day</span>
+            </li>
+            <li class="list-item">
+              <ion-icon
+                class="checkmark-outline"
+                name="checkmark-outline"
+              ></ion-icon>
+              <span>Order <strong>24/7</strong></span>
+            </li>
+            <li class="list-item">
+              <ion-icon
+                class="checkmark-outline"
+                name="checkmark-outline"
+              ></ion-icon
+              >Delivery is free
+            </li>
+            <li class="list-item">
+              <ion-icon
+                class="checkmark-outline"
+                name="checkmark-outline"
+              ></ion-icon
+              >Get access to latest recipes
+            </li>
+          </ul>
+
+          <!--BUTTON CTA-->
+          <div class="plan-button">
+            <a href="#" class="btn btn--full">Start eating well</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="container center-text">
+        <p class="plan-details">
+          Prices include all applicable taxes. You can cancel at any time. Both
+          plans include the following:
+        </p>
+      </div>
+
+      <!--FEATURES PART-->
+      <div class="container grid grid--4cols feature">
+        <!--FEATURE 1-->
+        <div class="feature">
+          <ion-icon class="feature-icon" name="infinite-outline"></ion-icon>
+          <p class="feature-title">Never cook again!</p>
+          <p class="feature-text">
+            Our subscriptions cover 365 days per year, even including major
+            holidays.
+          </p>
+        </div>
+        <!--FEATURE 2-->
+        <div class="feature">
+          <ion-icon class="feature-icon" name="nutrition-outline"></ion-icon>
+          <p class="feature-title">Local and organic</p>
+          <p class="feature-text">
+            Our cooks only use local, fresh, and organic products to prepare
+            your meals.
+          </p>
+        </div>
+        <!--FEATURE 3-->
+        <div class="feature">
+          <ion-icon class="feature-icon" name="leaf-outline"></ion-icon>
+          <p class="feature-title">No waste</p>
+          <p class="feature-text">
+            All our partners only use reusable containers to package all your
+            meals.
+          </p>
+        </div>
+        <!--FEATURE 4-->
+        <div class="feature">
+          <ion-icon class="feature-icon" name="pause-outline"></ion-icon>
+          <p class="feature-title">Pause anytime</p>
+          <p class="feature-text">
+            Going on vacation? Just pause your subscription, and we refund
+            unused days.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!--SECTION CALL TO ACTION-->
+    <section class="section-cta">
+      <div class="container">
+        <div class="cta">
+          <div class="cta-content">
+            <h2 class="heading-secondary">Get your first meal for free!</h2>
+            <p class="cta-text">
+              Healthy, tasty and hassle-free meals are waiting for you. Start
+              eating well today. You can cancel or pause anytime. And the first
+              meal is on us!
+            </p>
+            <form>
+              <!--Name-->
+              <label for="">Full Name</label>
+              <input type="text" placeholder="John Smith" />
+              <!--Email-->
+              <label for="">Email address</label>
+              <input type="email" placeholder="me@example.com" />
+              <!--Hear from us-->
+
+              <!--CTA Button-->
+            </form>
+          </div>
+
+          <!--IMAGE-->
+          <div
+            class="cta-image"
+            role="img"
+            aria-label="Woman enjoying food"
+          ></div>
         </div>
       </div>
     </section>
