--- a/index.html
+++ b/index.html
@@ -672,8 +672,103 @@
     </section>
 
     <!--SECTION FOOTER -->
+    <footer class="footer">
+      <div class="container grid grid--footer">
+        <!--LOGO-->
+        <div class="logo-col">
+          <a href="#" class="footer-logo"
+            ><img
+              class="logo"
+              src="images/omnifood-logo.png"
+              alt="ominifood logo"
+          /></a>
 
-    <footer></footer>
+          <!--SOCIAL MEDIA ICONS-->
+          <ul class="social-links">
+            <!--INSTAGRAM-->
+            <li>
+              <a class="footer-link" href="#"
+                ><ion-icon class="social-icon" name="logo-instagram"></ion-icon
+              ></a>
+            </li>
+
+            <!--FACEBOOK-->
+            <li>
+              <a class="footer-link" href="#"
+                ><ion-icon class="social-icon" name="logo-facebook"></ion-icon
+              ></a>
+            </li>
+
+            <!--TWITTER-->
+            <li>
+              <a href="#"
+                ><a class="footer-link" href="#"
+                  ><ion-icon
+                    class="social-icon"
+                    name="logo-twitter"
+                  ></ion-icon></a
+              ></a>
+            </li>
+          </ul>
+
+          <!--COPYRIGHT-->
+          <p class="copyright">
+            Copyright &copy; 2022 by Omnifood, Inc. All rights reserved.
+          </p>
+        </div>
+
+        <!--ADRESS-->
+        <div class="adress-col">
+          <p class="footer-heading">Contact us</p>
+          <address class="contacts">
+            <p>623 Harrison St., 2nd Floor, San Francisco, CA 94107</p>
+            <p>
+              <a class="footer-link" href="tel:415-201-6370">415-201-6370</a
+              ><br />
+              <a class="footer-link" href="mailto:hello@omnifood.com"
+                >hello@omnifood.com</a
+              >
+            </p>
+          </address>
+        </div>
+
+        <!--ACCOUNT-->
+        <nav class="nav-col">
+          <p class="footer-heading">Account</p>
+
+          <ul class="footer-nav">
+            <li><a class="footer-link" href="#">Create account</a></li>
+            <li><a class="footer-link" href="#">Sign in</a></li>
+            <li><a class="footer-link" href="#">IOS app</a></li>
+            <li><a class="footer-link" href="#">Android app</a></li>
+          </ul>
+        </nav>
+
+        <!--COMPANY-->
+        <nav class="nav-col">
+          <p class="footer-heading">Company</p>
+
+          <ul class="footer-nav">
+            <li><a class="footer-link" href="#">About Omnifood</a></li>
+            <li><a class="footer-link" href="#">For Business</a></li>
+            <li><a class="footer-link" href="#">Cooking partners</a></li>
+            <li><a class="footer-link" href="#">Careers</a></li>
+          </ul>
+        </nav>
+
+        <!--RESOURCES-->
+        <nav class="nav-col">
+          <p class="footer-heading">Resources</p>
+
+          <ul class="footer-nav">
+            <li><a class="footer-link" href="#">Recipe directory</a></li>
+            <li><a class="footer-link" href="#">Help center</a></li>
+            <li><a class="footer-link" href="#">Privacy & terms</a></li>
+          </ul>
+        </nav>
+      </div>
+    </footer>
+
     <!--IONIC ICONS-->
     <script
       type="module"
