--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/queries.css" />
     <title>Omnifood - Never cook again!</title>
   </head>
   <body>
     <!--HEADER-->
     <header class="header">
+      <!--nav-open-->
       <!--LOGO-->
       <img class="logo" src="images/omnifood-logo.png" alt="ominifood logo" />
 
@@ -24,6 +26,15 @@
           <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
         </ul>
       </nav>
+
+      <!--MOBILE NAV-->
+      <button class="mobile-nav">
+        <!--OPEN-->
+        <ion-icon class="mobile-icon" name="menu-outline"></ion-icon>
+
+        <!--CLOSE-->
+        <ion-icon class="mobile-icon" name="close-outline"></ion-icon>
+      </button>
     </header>
 
     <main>
