--- a/index.html
+++ b/index.html
@@ -11,7 +11,27 @@
     <title>Omnifood - Never cook again!</title>
   </head>
   <body>
+    <!--HEADER-->
+    <header class="header">
+      <!--LOGO-->
+      <img class="logo" src="images/omnifood-logo.png" alt="Omnifood logo">
+
+      <!--NAV-->
+      <nav class="main-nav">
+          <ul class="main-nav-list">
+            <li><a class="main-nav-link" href="#">How it works</a></li>
+            <li><a class="main-nav-link" href="#">Meals</a></li>
+            <li><a class="main-nav-link" href="#">Testimonials</a></li>
+            <li><a class="main-nav-link" href="#">Pricing</a></li>
+            <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
+          </ul>
+      </nav>
+    </header>
+
     <!--HERO SECTION-->
+    <section class="section-hero">
+    
+    </section>
 
 
 
