refazendo omnifood - header, nav e hero section finalizados

--- a/index.html
+++ b/index.html
@@ -1,44 +1,88 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
-    <link rel="stylesheet" href="css/general.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/queries.css" />
-    <title>Omnifood - Never cook again!</title>
-  </head>
-  <body>
-    <!--HEADER-->
-    <header class="header">
-      <!--LOGO-->
-      <img class="logo" src="images/omnifood-logo.png" alt="Omnifood logo">
 
-      <!--NAV-->
-      <nav class="main-nav">
-          <ul class="main-nav-list">
-            <li><a class="main-nav-link" href="#">How it works</a></li>
-            <li><a class="main-nav-link" href="#">Meals</a></li>
-            <li><a class="main-nav-link" href="#">Testimonials</a></li>
-            <li><a class="main-nav-link" href="#">Pricing</a></li>
-            <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
-          </ul>
-      </nav>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
+  <link rel="stylesheet" href="css/general.css" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/queries.css" />
+  <title>Omnifood - Never cook again!</title>
+</head>
 
+<body>
+  <!--HEADER-->
+  <header class="header">
+    <!--LOGO-->
+    <img class="logo" src="images/omnifood-logo.png" alt="Omnifood logo">
+
+    <!--NAV-->
+    <nav class="main-nav">
+      <ul class="main-nav-list">
+        <li><a class="main-nav-link" href="#">How it works</a></li>
+        <li><a class="main-nav-link" href="#">Meals</a></li>
+        <li><a class="main-nav-link" href="#">Testimonials</a></li>
+        <li><a class="main-nav-link" href="#">Pricing</a></li>
+        <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!--MAIN CONTENT-->
+  <main>
     <!--HERO SECTION-->
     <section class="section-hero">
-    
+      <!--CONTAINER MAX-WIDTH 130REM-->
+      <div class="hero-container">
+
+        <!--TEXT-->
+        <div class="hero-text-box">
+          <h1 class="heading-primary">A healthy meal delivered to your door, every single day</h1>
+          <p class="hero-description">The smart 365-days-per-year food subscription that will make you eat healthy
+            again.
+            Tailored to your personal
+            tastes and nutritional needs.</p>
+
+          <!--BUTTONS-->
+          <a class="btn btn--full margin-right-sm" href="#">Start eating well</a>
+          <a class="btn btn--outline" href="#">Learn more &darr;</a>
+
+          <!--DELIVERED MEALS-->
+          <div class="delivered-meals">
+            <!--IMAGES-->
+            <div class="delivered-imgs">
+              <img src="images/customers/customer-1.jpg">
+              <img src="images/customers/customer-2.jpg">
+              <img src="images/customers/customer-3.jpg">
+              <img src="images/customers/customer-4.jpg">
+              <img src="images/customers/customer-5.jpg">
+              <img src="images/customers/customer-6.jpg">
+            </div>
+
+            <!--TEXT DELIVERED-->
+            <p class="delivered-text"><span>250,000+</span> meals delivered last year!</p>
+          </div>
+        </div>
+
+        <!--IMAGE-->
+        <div class="hero-img-box">
+          <img class="hero-img" src="images/hero.png" alt="Woman enjoying food">
+        </div>
+      </div>
     </section>
 
+    <!--FEATURED SECTION-->
+    <section class="section-featured">
+
+    </section>
+
+  </main>
 
 
-    <!--IONIC ICONS-->
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-    ></script>
-  </body>
+  <!--IONIC ICONS-->
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+</body>
+
 </html>
