--- a/index.html
+++ b/index.html
@@ -75,9 +75,128 @@
 
     <!--FEATURED SECTION-->
     <section class="section-featured">
+      <!--CONTAINER MAX-WIDTH 120REM-->
+      <div class="container">
+        <!--TEXT-->
+        <h2 class="heading-featured-in">As Featured in</h2>
 
+        <!--LOGOS-->
+        <div class="logos">
+          <img src="images/logos/techcrunch.png" alt="Techcrunch logo">
+          <img src="images/logos/business-insider.png" alt="Business insider logo">
+          <img src="images/logos/the-new-york-times.png" alt="New York Times logo">
+          <img src="images/logos/forbes.png" alt="Forbes logo">
+          <img src="images/logos/usa-today.png" alt="Usa Today logo">
+        </div>
+      </div>
     </section>
 
+    <!--HOW IT WORKS SECTION-->
+    <section class="section-how">
+      <!--CONTAINER MAX-WIDTH 120REM-->
+      <div class="container">
+        <span class="subheading">How it Works</span>
+        <h2 class="heading-secondary">Your daily dose of health in 3 simple steps</h2>
+      </div>
+
+      <!--CONTAINER MAX-WIDTH 120REM-->
+      <!--STEP 01-->
+      <div class="container grid grid-2cols grid-center-vertical">
+        <!--TEXT-->
+        <div class="step-text-box">
+          <p class="step-number">01</p>
+          <h3 class="heading-tertiary">Tell us what you like (and what not)</h3>
+          <p class="step-description">Never again waste time thinking about what to eat! Omnifood AI will create a 100%
+            personalized weekly meal plan just for you. It makes sure you get all the nutrients and vitamins you need,
+            no matter what diet you follow!</p>
+        </div>
+
+        <!--IMAGE-->
+        <div class="step-img-box">
+          <img class="step-img" src="images/app/app-screen-1.png" alt="Iphone app preferences selection screen">
+        </div>
+      </div>
+
+      <!--CONTAINER MAX-WIDTH 120REM-->
+      <!--STEP 02-->
+      <div class="container grid grid-2cols grid-center-vertical">
+        <!--IMAGE-->
+        <div class="step-img-box">
+          <img class="step-img" src="images/app/app-screen-2.png" alt="Iphone app preferences selection screen">
+        </div>
+
+        <!--TEXT-->
+        <div class="step-text-box">
+          <p class="step-number">02</p>
+          <h3 class="heading-tertiary">Approve your weekly meal plan</h3>
+          <p class="step-description">Once per week, approve the meal plan generated for you by Omnifood AI. You can
+            change ingredients, swap entire meals, or even add your own recipes.</p>
+        </div>
+      </div>
+
+      <!--CONTAINER MAX-WIDTH 120REM-->
+      <!--STEP 03-->
+      <div class="container grid grid-2cols grid-center-vertical">
+        <!--TEXT-->
+        <div class="step-text-box">
+          <p class="step-number">03</p>
+          <h3 class="heading-tertiary">Receive meals at convenient time</h3>
+          <p class="step-description">Best chefs in town will cook your selected meal every day, and we will deliver it
+            to your door whenever works best for you. You can change delivery schedule and address daily!</p>
+        </div>
+
+        <!--IMAGE-->
+        <div class="step-img-box">
+          <img class="step-img" src="images/app/app-screen-1.png" alt="Iphone app preferences selection screen">
+        </div>
+      </div>
+    </section>
+
+    <!--MEALS SECTION-->
+    <section class="section-meals">
+      <!--CONTAINER MAX-WIDTH 120REM-->
+      <div class="container">
+        <span class="subheading">Meals</span>
+        <h2 class="heading-secondary">Omnifood AI chooses from 5,000+ recipes</h2>
+      </div>
+
+      <!--CONTAINER MAX-WIDTH 120REM-->
+      <div class="container grid grid-3cols">
+        <!--MEAL-->
+        <div class="meal">
+          <!--MEAL IMAGE-->
+          <img class="meal-img" src="images/meals/meal-1.jpg" alt="Japanese Gyozas">
+          <!--MEAL TAG-->
+          <span class="tag">Vegetarian</span>
+          <!--MEAL TITLE-->
+          <p class="meal-title">Japanese Gyozas</p>
+          <!--MEAL ATTRIBUTES-->
+          <ul class="meal-attributes">
+            <li class="meal-attribute">650 calories</li>
+            <li class="meal-attribute">Nutriscore</li>
+            <li class="meal-attribute">650 calories</li>
+            <li class="meal-attribute">650 calories</li>
+          </ul>
+        </div>
+
+        <!--MEAL-->
+        <div class="meal">
+          <!--MEAL IMAGE-->
+          <img class="meal-img" src="images/meals/meal-2.jpg" alt="">
+          <!--MEAL TITLE-->
+          <p class="meal-title">Japanese Gyozas</p>
+          <!--MEAL ATTRIBUTES-->
+          <ul class="meal-attributes">
+            <li></li>
+          </ul>
+        </div>
+
+        <!--MEAL LIST-->
+        <div class="meal-list">
+
+        </div>
+      </div>
+    </section>
   </main>
 
 
