--- a/index.html
+++ b/index.html
@@ -158,36 +158,288 @@
         <div class="meal">
           <!--MEAL IMAGE-->
           <img class="meal-img" src="images/meals/meal-1.jpg" alt="Japanese Gyozas">
-          <!--MEAL TAG-->
-          <span class="tag">Vegetarian</span>
-          <!--MEAL TITLE-->
-          <p class="meal-title">Japanese Gyozas</p>
-          <!--MEAL ATTRIBUTES-->
-          <ul class="meal-attributes">
-            <li class="meal-attribute">650 calories</li>
-            <li class="meal-attribute">Nutriscore</li>
-            <li class="meal-attribute">650 calories</li>
-            <li class="meal-attribute">650 calories</li>
-          </ul>
+          <!--MEAL CONTENT-->
+          <div class="meal-content">
+            <!--MEAL TAG-->
+            <div class="meal-tags">
+              <span class="tag tag-vegetarian">Vegetarian</span>
+            </div>
+            <!--MEAL TITLE-->
+            <p class="meal-title">Japanese Gyozas</p>
+            <!--MEAL ATTRIBUTES-->
+            <ul class="meal-attributes">
+              <li class="meal-attribute">
+                <ion-icon class="meal-icon" name="flame-outline"></ion-icon>
+                <span><strong>650</strong> calories</span>
+              </li>
+              <li class="meal-attribute">
+                <ion-icon class="meal-icon" name="restaurant-outline"></ion-icon>
+                <span>Nutriscore &reg; <strong>74</strong></span>
+              </li>
+              <li class="meal-attribute">
+                <ion-icon class="meal-icon" name="star-outline"></ion-icon>
+                <span><strong>4.9</strong> rating (537)</span>
+              </li>
+            </ul>
+          </div>
         </div>
 
         <!--MEAL-->
         <div class="meal">
           <!--MEAL IMAGE-->
-          <img class="meal-img" src="images/meals/meal-2.jpg" alt="">
-          <!--MEAL TITLE-->
-          <p class="meal-title">Japanese Gyozas</p>
-          <!--MEAL ATTRIBUTES-->
-          <ul class="meal-attributes">
-            <li></li>
+          <img class="meal-img" src="images/meals/meal-2.jpg" alt="Avocado Salad">
+          <!--MEAL CONTENT-->
+          <div class="meal-content">
+            <!--MEAL TAG-->
+            <div class="meal-tags">
+              <span class="tag tag-vegan">Vegan</span>
+              <span class="tag tag-paleo">Paleo</span>
+            </div>
+            <!--MEAL TITLE-->
+            <p class="meal-title">Avocado Salad</p>
+            <!--MEAL ATTRIBUTES-->
+            <ul class="meal-attributes">
+              <li class="meal-attribute">
+                <ion-icon class="meal-icon" name="flame-outline"></ion-icon>
+                <span><strong>400</strong> calories</span>
+              </li>
+              <li class="meal-attribute">
+                <ion-icon class="meal-icon" name="restaurant-outline"></ion-icon>
+                <span>Nutriscore &reg; <strong>92</strong></span>
+              </li>
+              <li class="meal-attribute">
+                <ion-icon class="meal-icon" name="star-outline"></ion-icon>
+                <span><strong>4.8</strong> rating (441)</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <!--DIETS LIST-->
+        <div class="diets">
+          <!--TEXT-->
+          <h3 class="heading-tertiary">Works with any diet:</h3>
+          <!--LIST-->
+          <ul class="list">
+            <li class="list-item">
+              <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+              <span>Vegetarian</span>
+            </li>
+            <li class="list-item">
+              <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+              <span>Vegan</span>
+            </li>
+            <li class="list-item">
+              <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+              <span>Pescatarian</span>
+            </li>
+            <li class="list-item">
+              <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+              <span>Gluten-free</span>
+            </li>
+            <li class="list-item">
+              <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+              <span>Lactose-free</span>
+            </li>
+            <li class="list-item">
+              <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+              <span>Keto</span>
+            </li>
+            <li class="list-item">
+              <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+              <span>Paleo</span>
+            </li>
+            <li class="list-item">
+              <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+              <span>Low FODMAP</span>
+            </li>
+            <li class="list-item">
+              <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+              <span>Kid-friendly</span>
+            </li>
           </ul>
         </div>
+      </div>
 
-        <!--MEAL LIST-->
-        <div class="meal-list">
+      <!--LINK ALL RECIPES-->
+      <!--CONTAINER MAX-WIDTH 120REM-->
+      <div class="container all-recipes">
+        <a class="link" href="#">See all recipes &rarr;</a>
+      </div>
+    </section>
 
+    <!--TESTIMONIALS SECTION-->
+    <section class="section-testimonials ">
+      <!--TESTIMONIAL HEADER-->
+      <div class="testimonials-container">
+        <span class="subheading">Testimonials</span>
+        <h2 class="heading-secondary">Once you try it, you can't go back</h2>
+
+
+        <!--TESTIMONIALS CONTAINER-->
+        <div class="testimonials">
+          <!--TESTIMONIAL-->
+          <figure class="testimonial">
+            <img class="testimonial-img" src="images/customers/dave.jpg">
+            <blockquote class="testimonial-text">
+              Inexpensive, healthy and great-tasting meals, without even having to
+              order manually! It feels truly magical.
+            </blockquote>
+            <p class="testimonial-name">&mdash; Dave Bryson</p>
+          </figure>
+
+          <!--TESTIMONIAL-->
+          <figure class="testimonial">
+            <img class="testimonial-img" src="images/customers/ben.jpg">
+            <blockquote class="testimonial-text">
+              The AI algorithm is crazy good, it chooses the right meals for me every time. It's amazing not to worry
+              about food anymore!
+            </blockquote>
+            <p class="testimonial-name">&mdash; Ben Hadley</p>
+          </figure>
+
+          <!--TESTIMONIAL-->
+          <figure class="testimonial">
+            <img class="testimonial-img" src="images/customers/steve.jpg">
+            <blockquote class="testimonial-text">
+              Omnifood is a life saver! I just started a company, so there's no time for cooking. I couldn't live
+              without
+              my daily meals now!
+            </blockquote>
+            <p class="testimonial-name">&mdash; Steve Miller</p>
+          </figure>
+
+          <!--TESTIMONIAL-->
+          <figure class="testimonial">
+            <img class="testimonial-img" src="images/customers/hannah.jpg">
+            <blockquote class="testimonial-text">
+              I got Omnifood for the whole family, and it frees up so much time! Plus, everything is organic and vegan
+              and
+              without plastic.
+            </blockquote>
+            <p class="testimonial-name">&mdash; Hannah Smith</p>
+          </figure>
         </div>
       </div>
+
+      <!--GALLERY-->
+      <div class="gallery">
+        <!--PHOTOS-->
+        <figure class="gallery-item">
+          <img src="images/gallery/gallery-1.jpg">
+        </figure>
+        <figure class="gallery-item">
+          <img src="images/gallery/gallery-2.jpg">
+        </figure>
+        <figure class="gallery-item">
+          <img src="images/gallery/gallery-3.jpg">
+        </figure>
+        <figure class="gallery-item">
+          <img src="images/gallery/gallery-4.jpg">
+        </figure>
+        <figure class="gallery-item">
+          <img src="images/gallery/gallery-5.jpg">
+        </figure>
+        <figure class="gallery-item">
+          <img src="images/gallery/gallery-6.jpg">
+        </figure>
+        <figure class="gallery-item">
+          <img src="images/gallery/gallery-7.jpg">
+        </figure>
+        <figure class="gallery-item">
+          <img src="images/gallery/gallery-8.jpg">
+        </figure>
+        <figure class="gallery-item">
+          <img src="images/gallery/gallery-9.jpg">
+        </figure>
+        <figure class="gallery-item">
+          <img src="images/gallery/gallery-10.jpg">
+        </figure>
+        <figure class="gallery-item">
+          <img src="images/gallery/gallery-11.jpg">
+        </figure>
+        <figure class="gallery-item">
+          <img src="images/gallery/gallery-12.jpg">
+        </figure>
+      </div>
+    </section>
+
+    <!--PRICING SECTION-->
+    <section class="section-pricing">
+
+      <!--PRICING SECTION HEADER-->
+      <div class="container">
+        <span class="subheading">Pricing</span>
+        <h2 class="heading-secondary">Eating well without breaking the bank</h2>
+      </div>
+
+      <!--PRICING PLANS-->
+      <div class="container grid grid-2cols">
+        <!--STARTER PLAN-->
+        <div class="pricing-plan starter-plan">
+          <header class="plan-header">
+            <p class="plan-name">Starter</p>
+            <p class="plan-price"><span>$</span>399</p>
+            <p class="plan-text">per month. That's just $13 per meal!</p>
+          </header>
+
+          <!--LIST-->
+          <ul class="list">
+            <li class="list-item">
+              <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+              <span>1 meal per day</span>
+            </li>
+            <li class="list-item">
+              <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+              <span>Order from 11am to 9pm</span>
+            </li>
+            <li class="list-item">
+              <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+              <span>Delivery is free</span>
+            </li>
+            <li class="list-item">
+              <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+              <span>Delivery is free</span>
+            </li>
+          </ul>
+
+          <!--CTA BUTTON-->
+          <a href="#" class="btn btn-full">Start eating well</a>
+        </div>
+
+        <!--COMPLETE PLAN-->
+        <div class="pricing-plan complete-plan">
+          <header class="plan-header">
+            <p class="plan-name">Complete</p>
+            <p class="plan-price"><span>$</span>649</p>
+            <p class="plan-text">per month. That's just $11 per meal!</p>
+          </header>
+
+          <!--LIST-->
+          <ul class="list">
+            <li class="list-item">
+              <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+              <span><strong>2 meals</strong> per day</span>
+            </li>
+            <li class="list-item">
+              <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+              <span>Order <strong>24/7</strong></span>
+            </li>
+            <li class="list-item">
+              <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+              <span>Delivery is free</span>
+            </li>
+            <li class="list-item">
+              <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+              <span>Get access to latest recipes</span>
+            </li>
+          </ul>
+
+          <!--CTA BUTTON-->
+          <a href="#" class="btn btn-full">Start eating well</a>
+        </div>
+      </div>
+
     </section>
   </main>
 
